新增 注册时校验用户名是否已存在数据库中

--- a/templates/register.html
+++ b/templates/register.html
@@ -55,7 +55,7 @@
                     <li class="reg_sub">
                         <input type="submit" value="注 册" name="">
                     </li>
-                    {{ errmsg }}
+                    <span style="color: red">{{ errmsg }}</span>
                 </ul>
             </form>
         </div>
